--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@imprakhartripathi/scafollder",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "CLI tool to scaffold my custom Mongo-Express-Node backend project structure with TypeScript",
   "main": "bin/cli.js",
   "bin": {
@@ -15,6 +15,14 @@
   ],
   "author": "Prakhar Tripathi",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/imprakhartripathi/npm-imprakhartripathi-scafollder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/imprakhartripathi/npm-imprakhartripathi-scafollder/issues"
+  },
+  "homepage": "https://github.com/imprakhartripathi/npm-imprakhartripathi-scafollder#readme",
   "dependencies": {
     "fs-extra": "^11.1.1"
   }
